# mu2e-TrkHitDispatch

./: .muse  CMakeLists.txt
fcl/: prolog.fcl
inc/: RobustDispatcher.hh
src/: CMakeLists.txt  RobustDispatcher.cc  SConscript  TrkHitDispatch_module.cc  classes.h
